site/css/main.scss
/* ... */
input {
	width: 100%;
	padding: 18px 20px 14px 20px;
	border: 1px solid #E0E0E0;
	border-radius: 2px;
	color: #4D4D4D;
	font-size: 17px;
	-webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

	&:focus {
		border-color: #d5d5d5;
	}

	&:focus, &:hover {
		outline: none;
	}
}

#search.error {
	border: 1px solid #F18B8B;
}

::-webkit-input-placeholder {
   color: #c7c7c7;
}
:-moz-placeholder { 
   color: #c7c7c7;  
}
::-moz-placeholder {  
   color: #c7c7c7;  
}
:-ms-input-placeholder {  
   color: #c7c7c7;  
}

/*****************
      Body
*****************/

h2 {
	font-weight: normal;
}

body {
	cursor: default;
	height: 100%;
	background: #fff;
	color: #000;
	font-family: "Avenir Light";
	transition: all 800ms ease-in-out;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
  -webkit-backface-visibility: hidden;
}

#body-bigError {
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: -1;
	color: red;
	font-size: 80vh;
	text-align: center;
}

#body-bigCount {
	position: absolute;
	left: 50%; 
  bottom: -12vw; 
  transform: translateX(-50%);
	font-size: 33vw;
	@extend .text-green;

	&:after {
		content: "Site Count";
		position: absolute;
		top: 3.5vw;
		right: 1.75vw;
		text-transform: uppercase;
		font-size: 1.05vw;
		letter-spacing: 0.025vw;
	}
}

#searchWrap {
	width: 634px;
	position: absolute;
	margin-left: -285px;
	left: 50%;
	z-index: 10;
  @include custom-bezier(all, .65s);
  height: 100%;
  top: 0;
  padding: 34px 32px;
  z-index: 1001;
  opacity:0.999;
	-webkit-backface-visibility:hidden;
	transform: translateZ(0);
}

#dropDown {
  background-color: #FFF;
  border: 1px solid #29BD66;
  z-index: 2000;
  position: absolute;
  width: 100%;
  top: 68px;
  display: none;
  @include custom-bezier(all, .4s);
  border-radius: 3px;
  min-height: 42px;

  &.compare {
		left: 440px;
		top: auto;
		bottom: 104px;
		position: fixed;
		width: 469px;

		&:before {
			bottom: -8px;
			top: auto;
			left: 16px;
			border-left: 8px solid rgba(0, 0, 0, 0);
			border-right: 8px solid rgba(0, 0, 0, 0);
			border-top: 8px solid #29BD66;
			border-bottom: 0;
		}

		&:after {
			bottom: -6px;
			top: auto;
			left: 18px;
			border-left: 6px solid rgba(0, 0, 0, 0);
			border-right: 6px solid rgba(0, 0, 0, 0);
			border-top: 6px solid #fff;
			border-bottom: 0;
		}
  }

  .loader {
  	display: block;
		left: 50%;
		margin-left: -5em;
		top: 50%;
		margin-top: -5em;
  }

  &:before, &:after {
		content: '';
		position: absolute;
		width: 0;
		height: 0;
	}

	&:before {
		top: -8px;
		left: 16px;
		border-left: 8px solid rgba(0, 0, 0, 0);
		border-right: 8px solid rgba(0, 0, 0, 0);
		border-bottom: 8px solid #29BD66;
	}

	&:after {
		top: -6px;
		left: 18px;
		border-left: 6px solid rgba(0, 0, 0, 0);
		border-right: 6px solid rgba(0, 0, 0, 0);
		border-bottom: 6px solid #fff;
	}

  &.show {
  	display: block;
  }

  ul{
  	max-height: 186px;
		overflow: scroll;
		margin: 0;
		padding: 0;
		position: relative;
  	z-index: 1;
  }

  h3 {
  	color: #29BD66;
  	font-size: 14px;
  	padding: 0 10px 0 10px;
  	margin: 0;
  	background-color: white;
  	height: 36px;
  	line-height: 42px;

  	&.notFound {
  		color: #D8D8D8;
  	}
  }

  li {
  	list-style: none;
  	width: 100%;
  	display: block;
  	border-bottom: 1px solid #f5f5f5;
  	background-color: white;
		padding: 0 10px 0 10px;
		cursor: pointer;
		position: relative;
		height: 31px;
		line-height: 31px;

  	&:after, span {
			content: 'Search';
			color: #29BD66;
			position: absolute;
			right: 9px;
			top: 0;
			text-transform: uppercase;
			font-size: 11px;
			letter-spacing: 1px;
			font-weight: 600;
			opacity: 0;
  	}

  	span {
  		color: #C2C2C2;
  		opacity: 1;
  	}

  	&.selected {
  		background-color: #f5f5f5;
  	}

  	&:hover {
  		background-color: #f5f5f5;

  		span {
  			opacity: 0;
  		}

  		&:after {
  			opacity: 1;
  		}
  	}
  }
}

#header {
	font-family: "Avenir Black";
	text-transform: uppercase;
	margin-top: 115px;
	position: relative;
	display: block;
	text-align: center;
  @include custom-bezier(all, .65s);

	#header-code {
		position: absolute;
		top: -4px;
		width: 100%;
		text-align: right;
		font-family: "Avenir Medium";
		font-size: 10px;
		letter-spacing: 1px;
		text-transform: none;
		right: 142px;

		#header-code-property {
			display: inline-block;
			cursor: pointer;

			&:hover {
				@extend .text-green;
			}

			&:active {
				@extend .text-green;
			}

			a {
				span {
					font-size: 10px;
					top: -1px;
					position: relative;
					left: -1px;
				}
			}
		}
	}

	#header-logo {
		font-size: 60px;
		color: #3A3A3A;
		margin-bottom: 15px;
		opacity: 0;
    @include custom-bezier(font-size, .8s);

		o {
			color: #29BD66;
			animation: oPulse 2s infinite ease-in-out;
  		-webkit-animation: oPulse 2s infinite ease-in-out;
		}
	}
}

@-webkit-keyframes oPulse {
  0% {
    opacity: 1; 
  }

  50% {
    opacity: .7; 
  } 

  0% {
    opacity: 1; 
  }
}

@keyframes oPulse {
  0% {
    opacity: 1; 
  }

  50% {
    opacity: .7; 
  } 

  0% {
    opacity: 1; 
  }
}

#slogan {
	text-align: center;
	font-size: 21px;
	margin-bottom: 30px;
	line-height: 1.4;
  @include custom-bezier(font-size, .8s);

	strong {
		font-family: "Avenir Medium";
	}
}

#subSlogan {
	font-size: 14px;
	text-align: center;
	margin-top: 127px;

	a {
		border-bottom: 1px dotted black;
		padding: 0 0 2px 0;
	}

	span {
		font-family: "Avenir Medium";
		display: block;
		margin-bottom: 8px;
		font-size: 17px;
	}
}

.sectionHeader {
	margin: 1.3rem 0rem 0.65rem 0.05rem;

	font-family: "Avenir Black";
	font-size: 0.75rem;
	letter-spacing: 0.05rem;
	text-transform: uppercase;
}
/* ... */

